upgrade to Java 24